--- a/Mhook.vcxproj.filters
+++ b/Mhook.vcxproj.filters
@@ -15,39 +15,39 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\mhook-lib\mhook.cpp">
+    <ClCompile Include="vanilla\disasm-lib\cpu.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\disasm-lib\cpu.c">
+    <ClCompile Include="vanilla\disasm-lib\disasm.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\disasm-lib\disasm.c">
+    <ClCompile Include="vanilla\disasm-lib\disasm_x86.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\disasm-lib\disasm_x86.c">
+    <ClCompile Include="vanilla\disasm-lib\misc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\disasm-lib\misc.c">
+    <ClCompile Include="vanilla\mhook-lib\mhook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\mhook-lib\mhook.h">
+    <ClInclude Include="vanilla\disasm-lib\cpu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\disasm-lib\cpu.h">
+    <ClInclude Include="vanilla\disasm-lib\disasm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\disasm-lib\disasm.h">
+    <ClInclude Include="vanilla\disasm-lib\disasm_x86.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\disasm-lib\disasm_x86.h">
+    <ClInclude Include="vanilla\disasm-lib\disasm_x86_tables.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\disasm-lib\disasm_x86_tables.h">
+    <ClInclude Include="vanilla\disasm-lib\misc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\disasm-lib\misc.h">
+    <ClInclude Include="vanilla\mhook-lib\mhook.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
