--- a/Mhook.props
+++ b/Mhook.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <IncludePath>$(Mk3rdpartyPath)\Mhook\source;$(IncludePath)</IncludePath>
+    <IncludePath>$(Mk3rdpartyPath)\Mhook\vanilla;$(IncludePath)</IncludePath>
     <LibraryPath>$(MkOutputPath)\$(MkLibraryConfigurationName)\$(PlatformShortName);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup>
